# GIZMO

./: .gitignore  LICENSE  README.md  pyproject.toml
gizmo/: __init__.py  cli.py  schema.py
gizmo/analysis/: currency.py  qc.py
gizmo/export/: graphml.py  json_export.py
gizmo/graph/: __init__.py  network.py
gizmo/sources/: __init__.py  metabolon.py  metabolon_data_dictionary_PMC_OA_subset_4.14.2024.csv  metanetx.py  reactome.py
notebooks/: 01_gizmo_walkthrough.ipynb
tests/: test_analysis.py  test_disease.py  test_export.py  test_graph.py  test_metabolon.py
